# customer-churn-prediction

./: README.md  main.py  pyproject.toml
data/processed/: x_test.csv  x_train.csv
notebooks/: 01_data_cleaning.ipynb  02_eda.ipynb  03_data_preprocessing.ipynb  04_data_modeling.ipynb
