[project]
name = "customer-churn-prediction"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
	"numpy>=2.0.0",
	"pandas>=2.2.0",
	"matplotlib>=3.9.0",
	"seaborn>=0.13.0",
	"jupyter>=1.1.0",
	"openpyxl>=3.1.0",
	"ipykernel>=7.3.0",
	"scikit-learn>=1.9.0",
]
